force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Fax__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Fax__c</fullName>
    <description>Person direct business fax number.</description>
    <inlineHelpText>Person direct business fax number.</inlineHelpText>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>