force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Full_Address__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Full_Address__c</fullName>
    <description>Full address of the company.</description>
    <inlineHelpText>Full address of the company.</inlineHelpText>
    <label>Full Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>