force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Known_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Known_Full_Name__c</fullName>
    <description>Indicates if ZoomInfo recognizes a first name input value as a known full name using multiple sources including the uS Census.</description>
    <inlineHelpText>Indicates if ZoomInfo recognizes a first name input value as a known full name using multiple sources including the uS Census.</inlineHelpText>
    <label>Known Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>