force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Owner_Email__c</fullName>
    <label>Owner Email</label>
    <type>Email</type>
</CustomField>