force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Owner_Name__c</fullName>
    <label>Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>