force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__Person_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Person_Image_URL__c</fullName>
    <description>Link to image avatar of person.</description>
    <inlineHelpText>Link to image avatar of person.</inlineHelpText>
    <label>Person Image URL</label>
    <type>Url</type>
</CustomField>